Fix header on ios (#33504)

--- a/sass/homeassistant/_overrides.scss
+++ b/sass/homeassistant/_overrides.scss
@@ -402,7 +402,13 @@ a.material-card:hover {
   }
 }
 
+/* not contained inside frontpage class */
+.hero {
+  display: flex;
+}
+
 .frontpage {
+
   .material-card {
     margin-bottom: 24px;
   }
